# mrs_predictor

./: README.md
mrs_datmo/: CMakeLists.txt  package.xml
mrs_datmo/launch/: empty_world_tracking.launch
mrs_datmo/models/: cube.sdf  cylinder.sdf  human.dae  human.sdf
mrs_datmo/scripts/: motion_tracker.py  simulate_pedestrians.py
mrs_monitor/: CMakeLists.txt  package.xml
mrs_monitor/launch/: mrs_monitor.launch
mrs_monitor/scripts/: mrs_monitor.py
mrs_navigation/: CMakeLists.txt  package.xml
mrs_navigation/config/: base_local_planner_params.yaml
mrs_navigation/launch/: empty_world.launch  empty_world_patrolling.launch  empty_world_robots.launch  mrs_navigation.launch  one_robot.launch  patrolling.launch  pedestrians.launch  robots.launch
mrs_navigation/launch/includes/: amcl_node.xml  move_base.xml
mrs_navigation/maps/: empty_world_map.yaml  lagarona_map.pgm  lagarona_map.yaml  lamaranosa_map.pgm  puerto_barcelona_map.pgm
mrs_navigation/msg/: RobotStatus.msg
mrs_navigation/rviz/: multi_robot_empty_world.rviz  one_robot_empty_world.rviz  pedestrians.rviz  two_robots_empty_world.rviz
mrs_navigation/scenarios/: basic_world.xml  empty_world.xml  large_scenario.xml  small_scenario.xml
mrs_navigation/scripts/: patrol_fsm.py
mrs_threats/motion_prediction/: CMakeLists.txt  package.xml
mrs_threats/motion_prediction/data/: 20161104-104301-clusters.npy  20161107-184601-clusters.npy  20161107-193401-clusters.npy  20161108-200401-clusters.npy  20161109-112015-clusters.npy  20161109-112304-clusters.npy  20161109-121426-clusters.npy  20161113-183252-clusters.npy  20161113-191929-clusters.npy  20161117-185035-clusters.npy  20161117-185435-clusters.npy  20161117-191615-clusters.npy  20161118-161725-clusters.npy  20161118-162520-theBestclusters.npy  20161118-163602-clusters.npy  20161118-163826-clusters.npy
mrs_threats/motion_prediction/launch/: clustering.launch
mrs_threats/motion_prediction/scripts/: hmms.py  prediction.py
pedsim_ros/pedsim_simulator/launch/: simple_pedestrians.launch
pedsim_ros/pedsim_simulator/rviz/: social_contexts_activities.rviz
pedsim_ros/pedsim_simulator/scenarios/: simple.xml
pedsim_ros/pedsim_simulator/scripts/: dummy_transforms.py  mocktracks_info_screen.py
summit_xl/summit_xl_common/summit_xl_navigation/: CMakeLists.txt  package.xml
summit_xl/summit_xl_common/summit_xl_navigation/config/: base_local_planner_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  local_costmap_params.yaml  move_base.yaml  move_base_params.yaml  teb_local_planner_diff_params.yaml
summit_xl/summit_xl_common/summit_xl_navigation/config_rviz/: rviz_navigation.rviz
summit_xl/summit_xl_common/summit_xl_navigation/launch/: amcl.launch  move_base_nomap.launch  summit_xl_gmapping.launch
summit_xl/summit_xl_common/summit_xl_navigation/maps/: summitMap.pgm  summitMap.yaml
summit_xl/summit_xl_common/summit_xl_navigation/src/: sendGoals.cpp
(+21 files in other folders)
